# Urban-M5

./: .gitignore  AGENTS.md  CITATION.cff  README.md  app.py  eslint.config.js  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  rxconfig.py  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml  quality.yml
Urban_M5/: Urban_M5.py
app/: globals.css  layout.tsx  page.tsx
assets/data/: index.json
components/: image-table-panel.tsx  image-viewer-panel.tsx  keyboard-shortcuts.tsx  map-panel.tsx  panel-header.tsx  resizable-panels.tsx  segment-table-panel.tsx  toolbar.tsx
lib/: store.ts  types.ts
src/: App.tsx  Wrapper.tsx  main.tsx
src/components/: AnnotatedImage.tsx  FilterPanel.tsx  ImageMetaInfo.tsx  ImagePanel.tsx  KeyboardShortcuts.tsx  LabelVisibilityMenu.tsx  MapPanel.tsx  NavBar.tsx  Notes.tsx  RatingFilter.tsx  SegmentImage.tsx  SegmentImages.tsx  SegmentInstance.tsx  SegmentInstanceSortButton.tsx  SegmentJobDialog.tsx  Segmentations.tsx  Tags.tsx  ToggleSegmentationButton.tsx  ToggleSegmentationsButton.tsx  UrbanM5App.tsx  ZoomToImagesControl.tsx  mode-toggle.tsx  rating.tsx  theme-provider.tsx
src/components/ui/: context-menu.tsx  popover.tsx  sidebar.tsx
src/hooks/: filters.ts  streetscapes.ts
src/lib/: label-colors.ts  store.ts  streetscapes-api.ts
streetflex/: conf.py  streetflex.py
streetflex.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
streetflex/cli/: main.py
streetflex/streetflex/: streetflex.py
