[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['streetflex']

[project]
authors = [{ name = "Alexander Hadjiivanov" }]
name = "streetflex"
version = "2025"
requires-python = ">= 3.12"
dependencies = ["reflex", "pandas", "plotly", "cloup"]
description = "GUI segmentation and annotation tool for Streetscapes."
readme = "README.md"
license = "Apache-2.0"

[project.scripts]
streetflex = "streetflex.cli.main:run"
